[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/ObjectLayers/scripts/ObjectLayer.gd" type="Script" id=1]

[node name="ObjectLayer" type="Node"]
script = ExtResource( 1 )

[node name="LayerVisibleRepresentation" type="Sprite" parent="."]

[node name="OwnArea" type="Area2D" parent="."]

[node name="CollisionPolygon" type="CollisionPolygon2D" parent="OwnArea"]
